# textfsm-editor.react.web

./: .gitignore  .prettierrc  LICENSE  README.ja.md  README.md  docker-compose.yml  index.html  package.json  textfsm-editor.react.web.code-workspace  tsconfig.json  vite.config.ts
.github/workflows/: node.js.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/public/: ntc-templates-info.json
backend/scripts/: generate_ntc_template_info.py
backend/src/: api.py  api_types.py  main.py  myLogger.py  parse.py  response_type.py  result.py
backend/src/backend/: __init__.py  textfsm_parse.py
backend/src/fastapi/: fastapi_server.py
backend/src/lambda/: lambda_function.py  response.py
frontend/: .gitignore  .prettierrc  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.html  main.tsx  types.d.ts  vite-env.d.ts
frontend/src/components/: AlertCard.tsx  CopyValueButton.tsx  EditableText.tsx  FileDownloadButton.tsx  StatusBadge.tsx  TagBadege.tsx  TagBadgeMultiSelect.tsx  TransferList.module.css  TransferList.tsx
frontend/src/config/: defaultEnvs.ts  env.ts
frontend/src/features/: api.ts  apiType.d.ts  fileNames.ts  responseType.d.ts  types.d.ts
frontend/src/hooks/: useDataDeliver.ts  useFileSave.ts  useSendRequest.ts  useStableCallback.ts
frontend/src/layouts/: App.tsx  AppFooter.tsx  AppHeader.tsx  AppMain.tsx  (+7 more)
src/: main.tsx  types.d.ts
src/components/: CopyValueButton.tsx
src/hooks/: wrapper.ts
src/layouts/: App.tsx
src/utils/: helpers.ts
(+130 files in other folders)
